tests/files/lexer_tests/should_fail/108.cmdr
//Should not parse due to unterminated scope
timeout 40000 "hi" echo hi;}